# simon

./: CMakeLists.txt  LICENSE.md  README.md
code/: bsp.cpp  bsp.h  colors.h  simon.cpp
